--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
+  "scripts": {
+    "web:start": "expo start --web",
+    "web:export": "expo export -p web",
+    "web:serve": "serve -s dist"
+  },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@supabase/supabase-js": "^2.76.1",
-    "expo": "^54.0.20",
+    "base64-arraybuffer": "^1.0.2",
+    "expo": "^54.0.22",
+    "expo-file-system": "^19.0.17",
+    "expo-image-picker": "~17.0.8",
+    "expo-sharing": "~14.0.7",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-billing": "^3.0.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@expo/cli": "^54.0.13",
