--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "build": {
-    "outputDirectory": "dist"
-  },
+  "version": 2,
   "rewrites": [
-    { "source": "/_expo/:path*", "destination": "/_expo/:path*" },
-    { "source": "/assets/:path*", "destination": "/assets/:path*" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
