--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "base64-arraybuffer": "^1.0.2",
     "expo": "^54.0.22",
     "expo-file-system": "^19.0.17",
+    "expo-font": "^14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-sharing": "~14.0.7",
     "react": "19.1.0",
